--- a/linear regression.ipynb
+++ b/linear regression.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -149,12 +149,14 @@
        "[122 rows x 2 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Leer una archivo \".csv\" con la librería \"pandas\"\n",
+    "\n",
     "data = pd.read_csv(\"./Data.csv\")\n",
     "\n",
     "data"
@@ -162,19 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -185,10 +175,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x21fbd459970>"
+       "<matplotlib.collections.PathCollection at 0x136c6c3b430>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -206,12 +196,14 @@
     }
    ],
    "source": [
+    "# Realizar un gráfica de dispersión con la librería \"matplotlib\"\n",
+    "\n",
     "plt.scatter(data.Exposure,data.PEFR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -225,20 +217,25 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Crear un modelo de regresión lineal con la librería \"sklearn\"\n",
+    "\n",
     "model = linear_model.LinearRegression()\n",
+    "\n",
+    "# Entrenar el modelo\n",
+    "# model.fit(data_A, data_B)\n",
     "\n",
     "model.fit(data[['Exposure']],data['PEFR'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -337,7 +334,7 @@
        "[122 rows x 1 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -372,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -386,7 +383,7 @@
        "array([-4.18457649])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -412,7 +409,7 @@
        "       17, 18, 19, 20, 21, 22, 23, 24, 25])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -445,7 +442,7 @@
        "       324.15297092, 319.96839444])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -472,10 +469,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x21fbd4bd610>]"
+       "[<matplotlib.lines.Line2D at 0x136c6d57760>]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -498,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -516,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -541,7 +538,7 @@
        "Name: Exposure, Length: 122, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -577,7 +574,7 @@
        "Name: PEFR, Length: 122, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -614,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -628,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -652,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -696,7 +693,7 @@
        "       328.33754741, 328.33754741])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -734,7 +731,7 @@
        "Name: PEFR, Length: 122, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "pycharm": {
