--- a/linear regression.ipynb
+++ b/linear regression.ipynb
@@ -175,7 +175,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x136c6c3b430>"
+       "<matplotlib.collections.PathCollection at 0x203afd38460>"
       ]
      },
      "execution_count": 3,
@@ -452,6 +452,7 @@
     "coef = model.coef_[0]\n",
     "\n",
     "# UFuncs de numpy\n",
+    "\n",
     "Y = intercept + coef*X\n",
     "Y"
    ]
@@ -469,7 +470,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x136c6d57760>]"
+       "[<matplotlib.lines.Line2D at 0x203afe52880>]"
       ]
      },
      "execution_count": 10,
@@ -505,15 +506,17 @@
    "outputs": [],
    "source": [
     "# Feature vector\n",
+    "\n",
     "x = data['Exposure']\n",
     "\n",
     "# Response vector\n",
+    "\n",
     "y = data['PEFR']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -538,7 +541,7 @@
        "Name: Exposure, Length: 122, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,10 +604,10 @@
     "\n",
     "    SSxy = np.sum((mean_x - x) * (mean_y - y))\n",
     "\n",
-    "    SSxx = np.sum((mean_x-x)*(mean_x-x))\n",
+    "    SSxx = np.sum((mean_x - x)*(mean_x - x))\n",
     "\n",
     "    b1 = SSxy/SSxx\n",
-    "    b0 = mean_y - b1 * mean_x\n",
+    "    b0 = mean_y - (b1 * mean_x)\n",
     "\n",
     "    return (b0,b1)"
    ]
@@ -771,18 +774,6 @@
     "plt.plot(Y,color=\"red\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
