--- a/linear regression.ipynb
+++ b/linear regression.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -149,7 +149,7 @@
        "[122 rows x 2 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -175,10 +175,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x203b125ce20>"
+       "<matplotlib.collections.PathCollection at 0x26511ab7f40>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -217,7 +217,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -334,7 +334,7 @@
        "[122 rows x 1 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -383,7 +383,7 @@
        "array([-4.18457649])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -409,7 +409,7 @@
        "       17, 18, 19, 20, 21, 22, 23, 24, 25])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -442,7 +442,7 @@
        "       324.15297092, 319.96839444])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -470,10 +470,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x203b01c8250>]"
+       "[<matplotlib.lines.Line2D at 0x26511b1fca0>]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -541,7 +541,7 @@
        "Name: Exposure, Length: 122, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -577,7 +577,7 @@
        "Name: PEFR, Length: 122, dtype: int64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -696,7 +696,7 @@
        "       328.33754741, 328.33754741])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -736,7 +736,7 @@
        "Name: PEFR, Length: 122, dtype: float64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false,
     "pycharm": {
