--- a/Multiple Linear Regression.ipynb
+++ b/Multiple Linear Regression.ipynb
@@ -10,11 +10,311 @@
     "- t-statistic: El coeficiente para un predictor, dividido por el error estándar del coeficiente. Nos da una métrica para comparar la importancia de las variables en el modelo.\n",
     "- Weighted regression: La regresión con los registros teniendo diferentes pesos."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Wife</th>\n",
+       "      <th>Alternating</th>\n",
+       "      <th>Husband</th>\n",
+       "      <th>Jointly</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Task</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Laundry</th>\n",
+       "      <td>156</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Main_meal</th>\n",
+       "      <td>124</td>\n",
+       "      <td>20</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dinner</th>\n",
+       "      <td>77</td>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Breakfast</th>\n",
+       "      <td>82</td>\n",
+       "      <td>36</td>\n",
+       "      <td>15</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tidying</th>\n",
+       "      <td>53</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dishes</th>\n",
+       "      <td>32</td>\n",
+       "      <td>24</td>\n",
+       "      <td>4</td>\n",
+       "      <td>53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shopping</th>\n",
+       "      <td>33</td>\n",
+       "      <td>23</td>\n",
+       "      <td>9</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Official</th>\n",
+       "      <td>12</td>\n",
+       "      <td>46</td>\n",
+       "      <td>23</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Driving</th>\n",
+       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "      <td>75</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Finances</th>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "      <td>21</td>\n",
+       "      <td>66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Insurance</th>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>53</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Repairs</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>160</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holidays</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>153</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Wife  Alternating  Husband  Jointly\n",
+       "Task                                          \n",
+       "Laundry     156           14        2        4\n",
+       "Main_meal   124           20        5        4\n",
+       "Dinner       77           11        7       13\n",
+       "Breakfast    82           36       15        7\n",
+       "Tidying      53           11        1       57\n",
+       "Dishes       32           24        4       53\n",
+       "Shopping     33           23        9       55\n",
+       "Official     12           46       23       15\n",
+       "Driving      10           51       75        3\n",
+       "Finances     13           13       21       66\n",
+       "Insurance     8            1       53       77\n",
+       "Repairs       0            3      160        2\n",
+       "Holidays      0            1        6      153"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "house_task = pd.read_csv(\"./Datasets/housetasks.csv\", index_col = 0)\n",
+    "house_task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Exposure</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PEFR</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>410</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>430</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>460</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>420</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>450</th>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>490</th>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500</th>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>370</th>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>122 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Exposure\n",
+       "PEFR          \n",
+       "390          0\n",
+       "410          0\n",
+       "430          0\n",
+       "460          0\n",
+       "420          1\n",
+       "...        ...\n",
+       "450         22\n",
+       "490         22\n",
+       "500         22\n",
+       "370         23\n",
+       "390         23\n",
+       "\n",
+       "[122 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lung_disease = pd.read_csv(\"./Datasets/LungDisease.csv\", index_col = 0)\n",
+    "lung_disease"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "4ed891b487fb81f716e2679362995843ef65140cef5197fa4419c4da0637580a"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.0 ('Entorno_AI': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
   },
   "orig_nbformat": 4
  },
